# goit-web_hw-module-12

./: .coverage  .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  test.db
conf/: cache.py  config.py  messages.py
database/: db.py
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 00bb8117d641_temporary_code_update_2.py  1796ccf266ab_temporary_code_update_3.py  1c77beccb5b5_temporary_code_update_5.py  456ee378c4fa_temporary_code_update.py  57daad0a4fda_init.py  6164d1f8c21e_init.py  6663e238d25f_roles_added_index_added.py  82178d34f943_v5_roles_updated.py  8b71a88fc817_v4_roles_updated.py  ac735feca252_remove_unique_fields_from_contacts.py  c239884acf39_temporary_code_update_4.py  d5e83aa1fe73_user_table_updated.py  d88a5117cd88_roles_added.py  edc947f2ce60_v6_roles_updated.py  fdbfd9162d1c_v7_roles_updated.py
src/contacts/: models.py  repository.py  routes.py  routes_admin.py  routes_users.py  schemas.py
src/services/: auth.py  healthchecker_router.py  roles.py  routes_email_status.py
src/services/auth/: jwt_auth.py  repository.py  routes.py  verify_email.py
src/services/health_checker/: health_checker.py
src/templates/: expired.html  index.html  password-reset.html  topics-listing.html
src/users/: models.py  repository.py  roles_checker.py  routes.py  schemas.py
tests/: conftest.py  seed_contacts.py  test.db  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_contacts_routes.py  test_e2e_contacts_routes_admin.py  test_unit_auth_repository.py  test_unit_contacts_repository.py  test_unit_users_repository.py
(+7 files in other folders)
